[package]
name = "port-killer"
version = "0.1.0"
description = "A Tauri application for managing and killing ports on your computer"
authors = ["mhbaaando <maxamuudyare21@gmail.com>"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mhbaando/port-killer"
homepage = "https://github.com/mhbaando/port-killer"
readme = "../README.md"
keywords = ["tauri", "port", "network", "management", "desktop"]
categories = ["network-programming", "gui", "system"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "port_killer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
